fixed spacing for patreon section and added some media queries properties for mobile

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -11,13 +11,6 @@
     flex-direction: column;
 }
 
-.heroSubText {
-    font-size: 17px;
-    padding-bottom: 20px;
-    line-height: 140%;
-    max-width: 530px;
-}
-
 .heroMainText {
     display: flex;
     justify-content: center;
