--- a/src/Components/HostsSection/HostsSection.css
+++ b/src/Components/HostsSection/HostsSection.css
@@ -3,8 +3,7 @@
     margin: auto;
     display: flex;
     flex-direction: column;
-    padding-top: 100px;
-    padding-bottom: 80px;
+    padding: 6.25rem 1.875rem 3.5rem 1.875rem;
 }
 
 .hostsSectionBanner {
