--- a/src/Components/LatestEpisodes/LatestEpisodes.css
+++ b/src/Components/LatestEpisodes/LatestEpisodes.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin: auto;
-    margin-top: 80px;
+    margin-top: 60px;
     max-width: 1140px;
     padding: 0 1.875rem;
 }
