--- a/src/Components/Patreon/Patreon.css
+++ b/src/Components/Patreon/Patreon.css
@@ -9,6 +9,7 @@
 .patreonImg {
     border-radius: 20px;
     max-width: 520px;
+    max-height: 440px;
     margin-top: 50px;
     box-shadow: 10px 10px 20px 0 rgba(55, 51, 44, 0.5);
 }
@@ -62,6 +63,7 @@
 
 @media only screen and (max-width: 1000px) {
     .patreonContainer {
+        align-items: center;
         flex-direction: column;
     }
 }
